k8s-on-premise-cloud/manifest/movie-web-backend-bill-service/bill-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bill-service-deployment
  namespace: movie-web
  labels:
    app: bill-service
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: bill-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bill-service
    spec:
      containers:
        - name: movie-web-backend-bill-service
          image: registry.nhatanhmovieweb.website/onlineshop/movie-web-backend-bill-service:v22_a1cd2a04
          ports:
            - containerPort: 3003
              protocol: TCP  
              name: tcp
          resources:
            requests:
              memory: "256Mi"
          volumeMounts:
            - mountPath: /home/node/app/.env
              name: bill-service-configmap
              subPath: .env
      imagePullSecrets:
        - name: auth-registry
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: bill-service-configmap
          configMap:
            defaultMode: 420
            name: bill-service-configmap
