k8s-on-premise-cloud/manifest/movie-web-backend-bill-service/bill-service-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bill-service-network-policy
  namespace: movie-web
spec:
  podSelector:
    matchLabels:
      app: bill-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api-gateway
        - podSelector:
            matchLabels:
              app: user-service
